Fixed an issue with Youtube on IE/FF

--- a/src/videojs/skin/afterglow/vjs-afterglow.less
+++ b/src/videojs/skin/afterglow/vjs-afterglow.less
@@ -1229,18 +1229,14 @@
 
 	&.vjs-youtube{
 		iframe{
-			display:none;
+			display:block;
+			visibility:hidden;
 		}
 
 		&.vjs-IE{
 			iframe{
 				display:block;
-			}
-		}
-
-		&.vjs-has-started{
-			iframe{
-				display:block;
+				visibility:visible;
 			}
 		}
 		
@@ -1277,6 +1273,27 @@
 			}
 			iframe{
 				display:block;
+			}
+		}
+	}
+
+	&.vjs-youtube-ready{
+		iframe{
+			display:none;
+			visibility:visible;
+		}
+
+		&.vjs-IE{
+			iframe{
+				display:block;
+				visibility:visible;
+			}
+		}
+
+		&.vjs-has-started{
+			iframe{
+				display:block;
+				visibility:visible;
 			}
 		}
 	}
@@ -1414,6 +1431,10 @@ and the native poster can take over */
 	position: absolute;
 	bottom: 50px;
 	pointer-events: none;
+}
+
+.video-js.vjs-IE .vjs-text-track-display{
+	display:none;
 }
 
 /* Captions Settings Dialog */
